# atelier-wm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
atelier/: CMakeLists.txt  atelier  atelier.c  atelier.h  atelierrc.default  event.c  launch.xbm  maximize.xbm  minimize.xbm  panel.c  panel.h  resource.c  resource.h  shutdown.xbm  time.c  time.h  unmaximize.xbm  window.c  window.h
atelier/test/: test_time.c
rorolina/: CMakeLists.txt  chktime.sh  compes.sh  desktopentry.h  entrysearch.c  rorolina  rorolina.c  t_entrysearch.c
xpractice/: CMakeLists.txt  practice.c  xprac
